--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -33,10 +33,10 @@
   margin-bottom: 50px;
 }
 .welcome__container {
+  padding: 25px 20px;
   max-width: 400px;
-  margin: 0 auto;
-  padding: 25px 0;
   position: relative;
+  margin: 0 auto;
   z-index: 2;
 }
 .welcome__text {
